--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -15,7 +15,7 @@ spring.datasource.password=@fIP1pQWIiB-Jol6U^W)
 spring.datasource.driverClassName=com.mysql.cj.jdbc.Driver
 spring.sql.init.encoding=UTF-8
 spring.jpa.properties.hibernate.globally_quoted_identifiers=true
-spring.jpa.hibernate.ddl-auto=none
+spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.datasource.hikari.poolName=Hikari
 spring.datasource.hikari.auto-commit=false
