--- a/build.gradle
+++ b/build.gradle
@@ -86,9 +86,12 @@ dependencies {
     // File Handling & Cloudinary
     implementation 'com.cloudinary:cloudinary-http44:1.31.0'
     implementation 'org.apache.commons:commons-text:1.12.0'
-    implementation 'commons-io:commons-io:2.11.0'
+    implementation 'commons-io:commons-io:2.15.1'
 
-    // Excel Handling
+    // Excel Handling (Apache POI requires commons-io >= 2.11.0)
+    implementation 'org.apache.poi:poi:5.2.5'
+    implementation 'org.apache.poi:poi-ooxml:5.2.5'
+    implementation 'org.apache.commons:commons-compress:1.26.0'
     implementation group: 'com.github.pjfanning', name: 'excel-streaming-reader', version: '4.3.1'
 
     // Apache HttpClient
