--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,7 +4,7 @@ spring.application.name=motorbike-be
 server.port=8345
 
 # CORS Configuration
-cors.allowed.origins=http://localhost:5000,http://localhost:5555,http://localhost:8081,http://202.92.6.227:5000
+cors.allowed.origins=http://localhost:8456,http://localhost:3000,http://202.92.6.227:8456
 
 spring.mvc.servlet.path=/api
 
@@ -55,7 +55,7 @@ oauth2.facebook.app-secret=your_fb_app_secret
 oauth2.facebook.debug-cache-ttl-ms=300000
 
 # JWT config
-app.secretKey==<6jnn0q=(0(pHvT6n0A%4gOT]aBD|F2Rjj*Z:,{*o#;{.!piYp<ojN?c}U[mkNuls%.2YM}RA+t.YdNt:<Ur*kNfwOnt,vHZ}Pry]aoWI1lo<m!mY](+op*<YQD1B,)
+app.secretKey=8d*R<7cf-U_?JaMIxAy9r7*iW^x]N?3B.;?P%1Ub%&?PA_5f$adH#Pb[bmY_xgi_Y8M.Q$ql9d27B<r#>{?%0&JIC^7p&5byeMjmC_*po*?Ok#ZJDK.pDwY|Y}|z*Go!
 # 30 days = 2,592,000 seconds
 app.jwtExpirationMs=2592000
 
